--- a/gulimall-coupon/gulimall-coupon-api/pom.xml
+++ b/gulimall-coupon/gulimall-coupon-api/pom.xml
@@ -11,4 +11,10 @@
 
   <artifactId>gulimall-coupon-api</artifactId>
 
+  <dependencies>
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-openfeign-core</artifactId>
+    </dependency>
+  </dependencies>
 </project>
