--- a/gulimall-ware/pom.xml
+++ b/gulimall-ware/pom.xml
@@ -22,7 +22,15 @@
   </parent>
 
   <dependencies>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-web</artifactId>
+    </dependency>
 
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-openfeign</artifactId>
+    </dependency>
     <dependency>
       <groupId>com.yanlaoge.gulimall</groupId>
       <artifactId>gulimall-common</artifactId>
