添加分类服务--解决跨域

--- a/gulimall-coupon/gulimall-coupon-biz/src/main/resources/bootstrap.properties
+++ b/gulimall-coupon/gulimall-coupon-biz/src/main/resources/bootstrap.properties
@@ -1,13 +1,15 @@
 spring.application.name=gulimall-coupon
 spring.cloud.nacos.config.server-addr=127.0.0.1:8848
-spring.cloud.nacos.config.namespace=de630391-31da-49a9-a94b-6efe028d2b70
+#spring.cloud.nacos.config.namespace=de630391-31da-49a9-a94b-6efe028d2b70
+spring.cloud.nacos.config.namespace=f29d7c75-2b6e-4392-b270-4c0475242514
+spring.cloud.nacos.config.file-extension=yml
 spring.cloud.nacos.config.group=dev
-spring.cloud.nacos.config.ext-config[0].data-id=datasource.yml
-spring.cloud.nacos.config.ext-config[0].group=dev
-spring.cloud.nacos.config.ext-config[0].refresh=true
-spring.cloud.nacos.config.ext-config[1].data-id=mybatis.yml
-spring.cloud.nacos.config.ext-config[1].group=dev
-spring.cloud.nacos.config.ext-config[1].refresh=true
-spring.cloud.nacos.config.ext-config[2].data-id=other.yml
-spring.cloud.nacos.config.ext-config[2].group=dev
-spring.cloud.nacos.config.ext-config[2].refresh=true
+#spring.cloud.nacos.config.ext-config[0].data-id=datasource.yml
+#spring.cloud.nacos.config.ext-config[0].group=dev
+#spring.cloud.nacos.config.ext-config[0].refresh=true
+#spring.cloud.nacos.config.ext-config[1].data-id=mybatis.yml
+#spring.cloud.nacos.config.ext-config[1].group=dev
+#spring.cloud.nacos.config.ext-config[1].refresh=true
+#spring.cloud.nacos.config.ext-config[2].data-id=other.yml
+#spring.cloud.nacos.config.ext-config[2].group=dev
+#spring.cloud.nacos.config.ext-config[2].refresh=true
