--- a/gulimall-member/gulimall-member-biz/src/main/resources/bootstrap.properties
+++ b/gulimall-member/gulimall-member-biz/src/main/resources/bootstrap.properties
@@ -1,4 +1,6 @@
 spring.application.name=gulimall-member
 spring.cloud.nacos.config.server-addr=127.0.0.1:8848
-spring.cloud.nacos.config.namespace=39b52dcc-a5d5-4208-987c-d78e3afe5850j
+#spring.cloud.nacos.config.namespace=39b52dcc-a5d5-4208-987c-d78e3afe5850j
+spring.cloud.nacos.config.namespace=52d9b336-a801-4215-a387-dff0f37fb959
+spring.cloud.nacos.config.group=dev
 spring.cloud.nacos.config.file-extension=yml
