修改cors 重复和Nacos注册

--- a/gulimall-gateway/src/main/resources/bootstrap.properties
+++ b/gulimall-gateway/src/main/resources/bootstrap.properties
@@ -1,6 +1,6 @@
-#spring.application.name=gulimall-gateway
-#spring.cloud.nacos.config.server-addr=127.0.0.1:8848
-##spring.cloud.nacos.config.namespace=a83ddfd4-7c26-4ee9-9254-ee776257969d
+spring.application.name=gulimall-gateway
+spring.cloud.nacos.config.server-addr=127.0.0.1:8848
+spring.cloud.nacos.config.namespace=a83ddfd4-7c26-4ee9-9254-ee776257969d
 #spring.cloud.nacos.config.namespace=7d7d18fc-304a-4be0-b547-95fd2204861e
-#spring.cloud.nacos.config.group=dev
-#spring.cloud.nacos.config.file-extension=yml
+spring.cloud.nacos.config.group=dev
+spring.cloud.nacos.config.file-extension=yml
