--- a/gulimall-common/pom.xml
+++ b/gulimall-common/pom.xml
@@ -29,6 +29,10 @@
 
   <dependencies>
     <dependency>
+      <groupId>com.alibaba.cloud</groupId>
+      <artifactId>spring-cloud-starter-alicloud-oss</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
