--- a/gulimall-product/gulimall-product-biz/pom.xml
+++ b/gulimall-product/gulimall-product-biz/pom.xml
@@ -16,6 +16,12 @@
       <artifactId>gulimall-product-api</artifactId>
       <version>0.0.1-SNAPSHOT</version>
     </dependency>
+<!--    <dependency>-->
+<!--      <groupId>com.aliyun.oss</groupId>-->
+<!--      <artifactId>aliyun-sdk-oss</artifactId>-->
+<!--      <version>3.8.0</version>-->
+<!--    </dependency>-->
+
   </dependencies>
 
 
