--- a/gulimall-third-party/gulimall-third-party-biz/pom.xml
+++ b/gulimall-third-party/gulimall-third-party-biz/pom.xml
@@ -3,21 +3,20 @@
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
-    <groupId>com.yanlaoge.gulimall.product</groupId>
-    <artifactId>gulimall-product</artifactId>
+    <artifactId>gulimall-third-party</artifactId>
+    <groupId>com.yanlaoge.gulimall.thirdparty</groupId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>gulimall-product-biz</artifactId>
+
+  <artifactId>gulimall-third-party-biz</artifactId>
+
   <dependencies>
     <dependency>
-      <groupId>com.yanlaoge.gulimall.product</groupId>
-      <artifactId>gulimall-product-api</artifactId>
-      <version>0.0.1-SNAPSHOT</version>
+      <groupId>com.alibaba.cloud</groupId>
+      <artifactId>spring-cloud-starter-alicloud-oss</artifactId>
+      <version>2.1.0.RELEASE</version>
     </dependency>
-
   </dependencies>
-
-
 </project>
