--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
     <module>renren-generator</module>
     <module>gulimall-common</module>
     <module>gulimall-gateway</module>
+    <module>gulimall-third-party</module>
   </modules>
 
   <properties>
