--- a/gulimall-product/gulimall-product-biz/src/main/resources/application.yml
+++ b/gulimall-product/gulimall-product-biz/src/main/resources/application.yml
@@ -13,6 +13,8 @@
 #    nacos:
 #      discovery:
 #        server-addr: 127.0.0.1:8848
+#  jackson:
+#    date-format: yyyy-MM-dd HH:mm:ss
 #
 #
 #mybatis-plus:
