--- a/gulimall-coupon/gulimall-coupon-api/pom.xml
+++ b/gulimall-coupon/gulimall-coupon-api/pom.xml
@@ -16,5 +16,11 @@
       <groupId>org.springframework.cloud</groupId>
       <artifactId>spring-cloud-openfeign-core</artifactId>
     </dependency>
+    <dependency>
+      <groupId>com.yanlaoge.gulimall.product</groupId>
+      <artifactId>gulimall-product-api</artifactId>
+      <version>0.0.1-SNAPSHOT</version>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
 </project>
