--- a/gulimall-member/gulimall-member-biz/pom.xml
+++ b/gulimall-member/gulimall-member-biz/pom.xml
@@ -22,6 +22,12 @@
       <artifactId>gulimall-coupon-api</artifactId>
       <version>0.0.1-SNAPSHOT</version>
     </dependency>
+    <dependency>
+      <groupId>com.yanlaoge.gulimall.product</groupId>
+      <artifactId>gulimall-product-api</artifactId>
+      <version>0.0.1-SNAPSHOT</version>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
 
 
