完成spu保存功能

--- a/gulimall-gateway/src/main/resources/application.yml
+++ b/gulimall-gateway/src/main/resources/application.yml
@@ -7,6 +7,12 @@
 #        server-addr: 127.0.0.1:8848
 #    gateway:
 #      routes:
+#        - id: gulimall-ware
+#          uri: lb://gulimall-ware
+#          predicates:
+#            - Path=/api/ware/**
+#          filters:
+#            - RewritePath=/api/(?<sement>.*),/$\{sement}
 #        - id: gulimall-member
 #          uri: lb://gulimall-member
 #          predicates:
