--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
     <module>gulimall-common</module>
     <module>gulimall-gateway</module>
     <module>gulimall-third-party</module>
+    <module>gulimall-search</module>
   </modules>
 
   <properties>
