--- a/pom.xml
+++ b/pom.xml
@@ -1,106 +1,116 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.1.8.RELEASE</version>
-    <relativePath/> <!-- lookup parent from repository -->
-  </parent>
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.1.8.RELEASE</version>
+        <relativePath/> <!-- lookup parent from repository -->
+    </parent>
 
-  <groupId>com.yanlaoge.gulimall</groupId>
-  <artifactId>gulimall</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <description>谷粒商城-聚合</description>
-  <packaging>pom</packaging>
-  <modules>
-    <module>gulimall-coupon</module>
-    <module>gulimall-member</module>
-    <module>gulimall-product</module>
-    <module>gulimall-order</module>
-    <module>gulimall-ware</module>
-    <module>renren-fast</module>
-    <module>renren-generator</module>
-    <module>gulimall-common</module>
-    <module>gulimall-gateway</module>
-    <module>gulimall-third-party</module>
-    <module>gulimall-search</module>
-  </modules>
+    <groupId>com.yanlaoge.gulimall</groupId>
+    <artifactId>gulimall</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <description>谷粒商城-聚合</description>
+    <packaging>pom</packaging>
+    <modules>
+        <module>gulimall-coupon</module>
+        <module>gulimall-member</module>
+        <module>gulimall-product</module>
+        <module>gulimall-order</module>
+        <module>gulimall-ware</module>
+        <module>renren-fast</module>
+        <module>renren-generator</module>
+        <module>gulimall-common</module>
+        <module>gulimall-gateway</module>
+        <module>gulimall-third-party</module>
+        <module>gulimall-search</module>
+    </modules>
 
-  <properties>
-    <java.version>1.8</java.version>
-    <spring-cloud.version>Greenwich.SR3</spring-cloud.version>
-    <alibaba.version>2.1.0.RELEASE</alibaba.version>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <java.version>1.8</java.version>
-    <mybatisplus.version>3.3.1</mybatisplus.version>
-    <mysql.version>8.0.17</mysql.version>
-    <mssql.version>4.0</mssql.version>
-    <oracle.version>11.2.0.3</oracle.version>
-    <druid.version>1.1.13</druid.version>
-    <quartz.version>2.3.0</quartz.version>
-    <commons.lang.version>2.6</commons.lang.version>
-    <commons.fileupload.version>1.2.2</commons.fileupload.version>
-    <commons.io.version>2.5</commons.io.version>
-    <commons.codec.version>1.10</commons.codec.version>
-    <commons.configuration.version>1.10</commons.configuration.version>
-    <shiro.version>1.4.0</shiro.version>
-    <jwt.version>0.7.0</jwt.version>
-    <kaptcha.version>0.0.9</kaptcha.version>
-    <qiniu.version>7.2.23</qiniu.version>
-    <aliyun.oss.version>2.8.3</aliyun.oss.version>
-    <qcloud.cos.version>4.4</qcloud.cos.version>
-    <swagger.version>2.7.0</swagger.version>
-    <joda.time.version>2.9.9</joda.time.version>
-    <gson.version>2.8.5</gson.version>
-    <fastjson.version>1.2.60</fastjson.version>
-    <hutool.version>4.1.1</hutool.version>
-    <lombok.version>1.18.4</lombok.version>
+    <properties>
+        <java.version>1.8</java.version>
+        <spring-cloud.version>Greenwich.SR3</spring-cloud.version>
+        <alibaba.version>2.1.0.RELEASE</alibaba.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <java.version>1.8</java.version>
+        <mybatisplus.version>3.3.1</mybatisplus.version>
+        <mysql.version>8.0.17</mysql.version>
+        <mssql.version>4.0</mssql.version>
+        <oracle.version>11.2.0.3</oracle.version>
+        <druid.version>1.1.13</druid.version>
+        <quartz.version>2.3.0</quartz.version>
+        <commons.lang.version>2.6</commons.lang.version>
+        <commons.fileupload.version>1.2.2</commons.fileupload.version>
+        <commons.io.version>2.5</commons.io.version>
+        <commons.codec.version>1.10</commons.codec.version>
+        <commons.configuration.version>1.10</commons.configuration.version>
+        <shiro.version>1.4.0</shiro.version>
+        <jwt.version>0.7.0</jwt.version>
+        <kaptcha.version>0.0.9</kaptcha.version>
+        <qiniu.version>7.2.23</qiniu.version>
+        <aliyun.oss.version>2.8.3</aliyun.oss.version>
+        <qcloud.cos.version>4.4</qcloud.cos.version>
+        <swagger.version>2.7.0</swagger.version>
+        <joda.time.version>2.9.9</joda.time.version>
+        <gson.version>2.8.5</gson.version>
+        <fastjson.version>1.2.60</fastjson.version>
+        <hutool.version>4.1.1</hutool.version>
+        <lombok.version>1.18.4</lombok.version>
+        <elasticsearch.version>7.4.2</elasticsearch.version>
+        <!--wagon plugin 配置-->
+        <service-path>/work/renren</service-path>
+        <pack-name>${project.artifactId}-${project.version}.jar</pack-name>
+        <remote-addr>192.168.1.10:22</remote-addr>
+        <remote-username>root</remote-username>
+        <remote-passwd>123456</remote-passwd>
+    </properties>
 
-    <!--wagon plugin 配置-->
-    <service-path>/work/renren</service-path>
-    <pack-name>${project.artifactId}-${project.version}.jar</pack-name>
-    <remote-addr>192.168.1.10:22</remote-addr>
-    <remote-username>root</remote-username>
-    <remote-passwd>123456</remote-passwd>
-  </properties>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring-cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.elasticsearch.client</groupId>
+                <artifactId>elasticsearch-rest-high-level-client</artifactId>
+                <version>${elasticsearch.version}</version>
+            </dependency>
+          <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>${commons.lang.version}</version>
+          </dependency>
+        </dependencies>
+    </dependencyManagement>
 
-  <dependencyManagement>
     <dependencies>
-      <dependency>
-        <groupId>org.springframework.cloud</groupId>
-        <artifactId>spring-cloud-dependencies</artifactId>
-        <version>${spring-cloud.version}</version>
-        <type>pom</type>
-        <scope>import</scope>
-      </dependency>
+
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+            <!--      <exclusions>-->
+            <!--        <exclusion>-->
+            <!--          <groupId>org.junit.vintage</groupId>-->
+            <!--          <artifactId>junit-vintage-engine</artifactId>-->
+            <!--        </exclusion>-->
+            <!--      </exclusions>-->
+        </dependency>
     </dependencies>
-  </dependencyManagement>
-
-  <dependencies>
-
-
-    <dependency>
-      <groupId>org.projectlombok</groupId>
-      <artifactId>lombok</artifactId>
-      <optional>true</optional>
-    </dependency>
-
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-test</artifactId>
-      <scope>test</scope>
-<!--      <exclusions>-->
-<!--        <exclusion>-->
-<!--          <groupId>org.junit.vintage</groupId>-->
-<!--          <artifactId>junit-vintage-engine</artifactId>-->
-<!--        </exclusion>-->
-<!--      </exclusions>-->
-    </dependency>
-  </dependencies>
 
 
 </project>
