--- a/gulimall-product/gulimall-product-api/pom.xml
+++ b/gulimall-product/gulimall-product-api/pom.xml
@@ -10,6 +10,20 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>gulimall-product-api</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>com.yanlaoge.gulimall.ware</groupId>
+            <artifactId>gulimall-ware-api</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.yanlaoge.gulimall.search</groupId>
+            <artifactId>gulimall-search-api</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
 
 </project>
