--- a/gulimall-product/gulimall-product-biz/pom.xml
+++ b/gulimall-product/gulimall-product-biz/pom.xml
@@ -16,6 +16,12 @@
       <artifactId>gulimall-product-api</artifactId>
       <version>0.0.1-SNAPSHOT</version>
     </dependency>
+      <dependency>
+          <groupId>com.yanlaoge.gulimall.search</groupId>
+          <artifactId>gulimall-search-api</artifactId>
+          <version>0.0.1-SNAPSHOT</version>
+          <scope>compile</scope>
+      </dependency>
 
   </dependencies>
 
