--- a/gulimall-search/gulimall-search-biz/pom.xml
+++ b/gulimall-search/gulimall-search-biz/pom.xml
@@ -15,5 +15,17 @@
             <groupId>org.elasticsearch.client</groupId>
             <artifactId>elasticsearch-rest-high-level-client</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.yanlaoge.gulimall.search</groupId>
+            <artifactId>gulimall-search-api</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.yanlaoge.gulimall.product</groupId>
+            <artifactId>gulimall-product-biz</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
