完成商品首页功能

--- a/gulimall-gateway/src/main/resources/application.yml
+++ b/gulimall-gateway/src/main/resources/application.yml
@@ -37,6 +37,11 @@
 #            - Path=/api/**
 #          filters:
 #            - RewritePath=/api/(?<sement>.*),/renren-fast/$\{sement}
+#        - id: gulimall_host
+#          uri: lb://gulimall-product
+#          predicates:
+#            - Host=**.gulimall.com,gulimall.com
+#
 #
 #server:
 #  port: 9000
