--- a/gulimall-product/gulimall-product-biz/pom.xml
+++ b/gulimall-product/gulimall-product-biz/pom.xml
@@ -56,6 +56,10 @@
             <artifactId>redisson-spring-boot-starter</artifactId>
             <version>3.12.5</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-cache</artifactId>
+        </dependency>
     </dependencies>
 
 
