--- a/gulimall-search/gulimall-search-biz/pom.xml
+++ b/gulimall-search/gulimall-search-biz/pom.xml
@@ -22,10 +22,13 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>com.yanlaoge.gulimall.product</groupId>
-            <artifactId>gulimall-product-biz</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-            <scope>compile</scope>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
     </dependencies>
 </project>
