--- a/gulimall-gateway/src/main/resources/application.yml
+++ b/gulimall-gateway/src/main/resources/application.yml
@@ -37,10 +37,14 @@
 #            - Path=/api/**
 #          filters:
 #            - RewritePath=/api/(?<sement>.*),/renren-fast/$\{sement}
+#        - id: gulimall_search_host
+#          uri: lb://gulimall-search
+#          predicates:
+#            - Host=search.gulimall.com
 #        - id: gulimall_host
 #          uri: lb://gulimall-product
 #          predicates:
-#            - Host=**.gulimall.com,gulimall.com
+#            - Host=gulimall.com
 #
 #
 #server:
