--- a/gulimall-search/gulimall-search-biz/src/main/resources/application.yml
+++ b/gulimall-search/gulimall-search-biz/src/main/resources/application.yml
@@ -1,13 +1,13 @@
-spring:
-  application:
-    name: gulimall-search
-  cloud:
-    nacos:
-      discovery:
-        server-addr: 127.0.0.1:8848
-  thymeleaf:
-    cache: false
-
-server:
-  port: 9008
-
+#spring:
+#  application:
+#    name: gulimall-search
+#  cloud:
+#    nacos:
+#      discovery:
+#        server-addr: 127.0.0.1:8848
+#  thymeleaf:
+#    cache: false
+#
+#server:
+#  port: 9009
+#
