--- a/gulimall-search/gulimall-search-biz/src/main/resources/bootstrap.properties
+++ b/gulimall-search/gulimall-search-biz/src/main/resources/bootstrap.properties
@@ -1,6 +1,6 @@
-#spring.application.name=gulimall-search
-#spring.cloud.nacos.config.server-addr=127.0.0.1:8848
-##spring.cloud.nacos.config.namespace=8d01f670-3dc4-4704-a447-02db51beb8a6
+spring.application.name=gulimall-search
+spring.cloud.nacos.config.server-addr=127.0.0.1:8848
+spring.cloud.nacos.config.namespace=fcd66684-a101-427e-adbe-a3d195c9aee4
 #spring.cloud.nacos.config.namespace=405d3f26-b3dd-4268-b1aa-17f6e215f628
-#spring.cloud.nacos.config.group=dev
-#spring.cloud.nacos.config.file-extension=yml
+spring.cloud.nacos.config.group=dev
+spring.cloud.nacos.config.file-extension=yml
