商品详情搭建

--- a/gulimall-gateway/src/main/resources/application.yml
+++ b/gulimall-gateway/src/main/resources/application.yml
@@ -44,7 +44,7 @@
 #        - id: gulimall_host
 #          uri: lb://gulimall-product
 #          predicates:
-#            - Host=gulimall.com
+#            - Host=gulimall.com,item.gulimall.com
 #
 #
 #server:
