--- a/gulimall-search/gulimall-search-biz/pom.xml
+++ b/gulimall-search/gulimall-search-biz/pom.xml
@@ -30,5 +30,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.yanlaoge.gulimall.product</groupId>
+            <artifactId>gulimall-product-api</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
