--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
         <module>gulimall-gateway</module>
         <module>gulimall-third-party</module>
         <module>gulimall-search</module>
+        <module>gulimall-auth-server</module>
     </modules>
 
     <properties>
