--- a/gulimall-third-party/gulimall-third-party-biz/pom.xml
+++ b/gulimall-third-party/gulimall-third-party-biz/pom.xml
@@ -18,5 +18,10 @@
       <artifactId>spring-cloud-starter-alicloud-oss</artifactId>
       <version>2.1.0.RELEASE</version>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-devtools</artifactId>
+      <optional>true</optional>
+    </dependency>
   </dependencies>
 </project>
