--- a/gulimall-auth-server/gulimall-auth-server-biz/pom.xml
+++ b/gulimall-auth-server/gulimall-auth-server-biz/pom.xml
@@ -22,5 +22,15 @@
             <artifactId>spring-boot-devtools</artifactId>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>com.yanlaoge.gulimall.auth</groupId>
+            <artifactId>gulimall-auth-server-api</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
     </dependencies>
 </project>
