--- a/gulimall-third-party/gulimall-third-party-biz/src/main/resources/application.yml
+++ b/gulimall-third-party/gulimall-third-party-biz/src/main/resources/application.yml
@@ -1,22 +1,22 @@
-spring:
-  application:
-    name: gulimall-third-party
-  cloud:
-    alicloud:
-      access-key: LTAI4GEEH4Asm83pNRUMd1S5
-      secret-key: OCTLZA2FFuRDvUPRYQ6KoyUsMEORxy
-      oss:
-        endpoint: oss-cn-beijing.aliyuncs.com
-        bucket: yanmall
-      sms:
-        host: http://smsmsgs.market.alicloudapi.com
-        path: /sms/
-        skin: 1
-        sign: 1
-        appcode:
-
-    nacos:
-      discovery:
-        server-addr: 127.0.0.1:8848
-server:
-  port: 9006
+#spring:
+#  application:
+#    name: gulimall-third-party
+#  cloud:
+#    alicloud:
+#      access-key: LTAI4GEEH4Asm83pNRUMd1S5
+#      secret-key: OCTLZA2FFuRDvUPRYQ6KoyUsMEORxy
+#      oss:
+#        endpoint: oss-cn-beijing.aliyuncs.com
+#        bucket: yanmall
+#      sms:
+#        host: https://feginesms.market.alicloudapi.com
+#        path: /codeNotice
+#        skin: 1
+#        sign: 1
+#        appcode: 5d70ca0a3db34815a55a1c806a4024f2
+#
+#    nacos:
+#      discovery:
+#        server-addr: 127.0.0.1:8848
+#server:
+#  port: 9006
