--- a/gulimall-product/gulimall-product-biz/pom.xml
+++ b/gulimall-product/gulimall-product-biz/pom.xml
@@ -65,6 +65,11 @@
             <artifactId>spring-boot-configuration-processor</artifactId>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>com.yanlaoge.gulimall.coupon</groupId>
+            <artifactId>gulimall-coupon-api</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 
