--- a/gulimall-auth-server/gulimall-auth-server-api/pom.xml
+++ b/gulimall-auth-server/gulimall-auth-server-api/pom.xml
@@ -10,6 +10,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>gulimall-auth-server-api</artifactId>
+    <dependencies>
+
+    </dependencies>
 
 
 </project>
