--- a/gulimall-auth-server/gulimall-auth-server-biz/pom.xml
+++ b/gulimall-auth-server/gulimall-auth-server-biz/pom.xml
@@ -32,5 +32,15 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.yanlaoge.gulimall.member</groupId>
+            <artifactId>gulimall-member-api</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.yanlaoge.gulimall.thirdparty</groupId>
+            <artifactId>gulimall-third-party-api</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
