--- a/gulimall-auth-server/gulimall-auth-server-biz/pom.xml
+++ b/gulimall-auth-server/gulimall-auth-server-biz/pom.xml
@@ -42,5 +42,9 @@
             <artifactId>gulimall-third-party-api</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.session</groupId>
+            <artifactId>spring-session-data-redis</artifactId>
+        </dependency>
     </dependencies>
 </project>
