--- a/gulimall-auth-server/gulimall-auth-server-biz/src/main/resources/application.yml
+++ b/gulimall-auth-server/gulimall-auth-server-biz/src/main/resources/application.yml
@@ -1,5 +1,8 @@
 server:
   port: 10003
+  servlet:
+    session:
+      timeout: 30m
 spring:
   application:
     name: gulimall-auth-server
@@ -13,3 +16,5 @@ spring:
   redis:
     host: 192.168.52.128
     port: 6379
+  session:
+    store-type: redis
