--- a/gulimall-product/gulimall-product-biz/src/main/resources/application.yml
+++ b/gulimall-product/gulimall-product-biz/src/main/resources/application.yml
@@ -25,6 +25,8 @@
 #    redis:
 #      time-to-live: 360000
 #      cache-null-values: true
+#  session:
+#    store-type: redis
 #
 #mybatis-plus:
 #  mapper-locations: classpath*:/mapper/**/*.xml
