--- a/gulimall-gateway/pom.xml
+++ b/gulimall-gateway/pom.xml
@@ -34,6 +34,10 @@
                     <groupId>org.springframework.boot</groupId>
                     <artifactId>spring-boot-starter-data-redis</artifactId>
                 </exclusion>
+                <exclusion>
+                    <groupId>org.springframework.session</groupId>
+                    <artifactId>spring-session-data-redis</artifactId>
+                </exclusion>
             </exclusions>
         </dependency>
         <dependency>
