--- a/gulimall-member/gulimall-member-biz/src/main/resources/application.yml
+++ b/gulimall-member/gulimall-member-biz/src/main/resources/application.yml
@@ -10,6 +10,11 @@
 #    nacos:
 #      discovery:
 #        server-addr: 127.0.0.1:8848
+#  redis:
+#    port: 6379
+#    host: 10.211.55.20
+#  session:
+#    store-type: redis
 #mybatis-plus:
 #  mapper-locations: classpath*:/mapper/**/*.xml
 #  global-config:
@@ -17,3 +22,4 @@
 #      id-type: auto
 #server:
 #  port: 10002
+#
