--- a/gulimall-cart/gulimall-cart-biz/pom.xml
+++ b/gulimall-cart/gulimall-cart-biz/pom.xml
@@ -17,6 +17,18 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.yanlaoge.gulimall.cart</groupId>
+            <artifactId>gulimall-cart-api</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.yanlaoge.gulimall.product</groupId>
+            <artifactId>gulimall-product-api</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
