--- a/gulimall-search/gulimall-search-biz/src/main/resources/application.yml
+++ b/gulimall-search/gulimall-search-biz/src/main/resources/application.yml
@@ -1,17 +1,17 @@
-spring:
-  application:
-    name: gulimall-search
-  cloud:
-    nacos:
-      discovery:
-        server-addr: 127.0.0.1:8848
-  thymeleaf:
-    cache: false
-  redis:
-    host: 192.168.52.128
-    port: 6379
-  session:
-    store-type: redis
-
-server:
-  port: 10005
+#spring:
+#  application:
+#    name: gulimall-search
+#  cloud:
+#    nacos:
+#      discovery:
+#        server-addr: 127.0.0.1:8848
+#  thymeleaf:
+#    cache: false
+#  redis:
+#    host: 192.168.52.128
+#    port: 6379
+#  session:
+#    store-type: redis
+#
+#server:
+#  port: 10005
