--- a/gulimall-order/gulimall-order-biz/pom.xml
+++ b/gulimall-order/gulimall-order-biz/pom.xml
@@ -17,6 +17,10 @@
       <version>0.0.1-SNAPSHOT</version>
       <scope>compile</scope>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-amqp</artifactId>
+    </dependency>
   </dependencies>
 
 
