--- a/gulimall-order/gulimall-order-biz/pom.xml
+++ b/gulimall-order/gulimall-order-biz/pom.xml
@@ -21,6 +21,27 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-amqp</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-thymeleaf</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-devtools</artifactId>
+      <optional>true</optional>
+    </dependency>
+      <dependency>
+          <groupId>com.yanlaoge.gulimall.member</groupId>
+          <artifactId>gulimall-member-api</artifactId>
+          <version>0.0.1-SNAPSHOT</version>
+          <scope>compile</scope>
+      </dependency>
+      <dependency>
+          <groupId>com.yanlaoge.gulimall.cart</groupId>
+          <artifactId>gulimall-cart-api</artifactId>
+          <version>0.0.1-SNAPSHOT</version>
+          <scope>compile</scope>
+      </dependency>
   </dependencies>
 
 
