--- a/gulimall-order/gulimall-order-biz/pom.xml
+++ b/gulimall-order/gulimall-order-biz/pom.xml
@@ -42,6 +42,12 @@
           <version>0.0.1-SNAPSHOT</version>
           <scope>compile</scope>
       </dependency>
+      <dependency>
+          <groupId>com.yanlaoge.gulimall.ware</groupId>
+          <artifactId>gulimall-ware-api</artifactId>
+          <version>0.0.1-SNAPSHOT</version>
+          <scope>compile</scope>
+      </dependency>
   </dependencies>
 
 
