完成订单确认页逻辑

--- a/gulimall-ware/gulimall-ware-biz/pom.xml
+++ b/gulimall-ware/gulimall-ware-biz/pom.xml
@@ -23,6 +23,12 @@
           <version>0.0.1-SNAPSHOT</version>
           <scope>compile</scope>
       </dependency>
+      <dependency>
+          <groupId>com.yanlaoge.gulimall.member</groupId>
+          <artifactId>gulimall-member-api</artifactId>
+          <version>0.0.1-SNAPSHOT</version>
+          <scope>compile</scope>
+      </dependency>
   </dependencies>
 
 
