--- a/gulimall-cart/pom.xml
+++ b/gulimall-cart/pom.xml
@@ -22,6 +22,12 @@
             <groupId>com.yanlaoge.gulimall</groupId>
             <artifactId>gulimall-common</artifactId>
             <version>0.0.1-SNAPSHOT</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.alibaba.cloud</groupId>
+                    <artifactId>spring-cloud-starter-alibaba-seata</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
     </dependencies>
 
