--- a/gulimall-coupon/gulimall-coupon-biz/src/main/resources/application.yml
+++ b/gulimall-coupon/gulimall-coupon-biz/src/main/resources/application.yml
@@ -1,27 +1,27 @@
-spring:
-  application:
-    name: gulimall-coupon
-  cloud:
-    nacos:
-      discovery:
-        server-addr: 127.0.0.1:8848
-  datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://192.168.52.128:3306/gulimall_sms?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
-    username: root
-    password: root
-  redis:
-    host: 192.168.52.128
-    port: 6379
-  session:
-    store-type: redis
-
-mybatis-plus:
-  mapper-locations: classpath*:/mapper/**/*.xml
-  global-config:
-    db-config:
-      id-type: auto
-
-
-server:
-  port: 10003
+#spring:
+#  application:
+#    name: gulimall-coupon
+#  cloud:
+#    nacos:
+#      discovery:
+#        server-addr: 127.0.0.1:8848
+#  datasource:
+#    driver-class-name: com.mysql.cj.jdbc.Driver
+#    url: jdbc:mysql://192.168.52.128:3306/gulimall_sms?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
+#    username: root
+#    password: root
+#  redis:
+#    host: 192.168.52.128
+#    port: 6379
+#  session:
+#    store-type: redis
+#
+#mybatis-plus:
+#  mapper-locations: classpath*:/mapper/**/*.xml
+#  global-config:
+#    db-config:
+#      id-type: auto
+#
+#
+#server:
+#  port: 10003
