--- a/gulimall-gateway/pom.xml
+++ b/gulimall-gateway/pom.xml
@@ -38,6 +38,10 @@
                     <groupId>org.springframework.session</groupId>
                     <artifactId>spring-session-data-redis</artifactId>
                 </exclusion>
+                <exclusion>
+                    <groupId>com.alibaba.cloud</groupId>
+                    <artifactId>spring-cloud-starter-alibaba-seata</artifactId>
+                </exclusion>
             </exclusions>
         </dependency>
         <dependency>
