--- a/gulimall-order/gulimall-order-biz/src/main/resources/registry.conf
+++ b/gulimall-order/gulimall-order-biz/src/main/resources/registry.conf
@@ -1,9 +1,9 @@
 registry {
   # file 、nacos 、eureka、redis、zk、consul、etcd3、sofa
-  type = "file"
+  type = "nacos"
 
   nacos {
-    serverAddr = "localhost"
+    serverAddr = "localhost:8848"
     namespace = "public"
     cluster = "default"
   }
