--- a/gulimall-member/gulimall-member-biz/pom.xml
+++ b/gulimall-member/gulimall-member-biz/pom.xml
@@ -1,34 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <parent>
-    <groupId>com.yanlaoge.gulimall.member</groupId>
-    <artifactId>gulimall-member</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-  </parent>
-  <modelVersion>4.0.0</modelVersion>
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <parent>
+        <groupId>com.yanlaoge.gulimall.member</groupId>
+        <artifactId>gulimall-member</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
+    </parent>
+    <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>gulimall-member-biz</artifactId>
+    <artifactId>gulimall-member-biz</artifactId>
 
-  <dependencies>
-    <dependency>
-      <groupId>com.yanlaoge.gulimall.member</groupId>
-      <artifactId>gulimall-member-api</artifactId>
-      <version>0.0.1-SNAPSHOT</version>
-    </dependency>
-    <dependency>
-      <groupId>com.yanlaoge.gulimall.coupon</groupId>
-      <artifactId>gulimall-coupon-api</artifactId>
-      <version>0.0.1-SNAPSHOT</version>
-    </dependency>
-    <dependency>
-      <groupId>com.yanlaoge.gulimall.product</groupId>
-      <artifactId>gulimall-product-api</artifactId>
-      <version>0.0.1-SNAPSHOT</version>
-      <scope>compile</scope>
-    </dependency>
-  </dependencies>
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>com.yanlaoge.gulimall.member</groupId>
+            <artifactId>gulimall-member-api</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.yanlaoge.gulimall.coupon</groupId>
+            <artifactId>gulimall-coupon-api</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.yanlaoge.gulimall.product</groupId>
+            <artifactId>gulimall-product-api</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+
+    </dependencies>
 
 
 </project>
