--- a/gulimall-member/gulimall-member-biz/src/main/resources/application.yml
+++ b/gulimall-member/gulimall-member-biz/src/main/resources/application.yml
@@ -15,6 +15,9 @@
 #    host: 10.211.55.20
 #  session:
 #    store-type: redis
+#  thymeleaf:
+#    cache: false
+#
 #mybatis-plus:
 #  mapper-locations: classpath*:/mapper/**/*.xml
 #  global-config:
