--- a/gulimall-third-party/gulimall-third-party-biz/pom.xml
+++ b/gulimall-third-party/gulimall-third-party-biz/pom.xml
@@ -28,5 +28,18 @@
       <artifactId>spring-boot-configuration-processor</artifactId>
       <optional>true</optional>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/com.alipay.sdk/alipay-sdk-java -->
+    <dependency>
+      <groupId>com.alipay.sdk</groupId>
+      <artifactId>alipay-sdk-java</artifactId>
+      <version>4.9.28.ALL</version>
+    </dependency>
+    <dependency>
+      <groupId>com.yanlaoge.gulimall.thirdparty</groupId>
+      <artifactId>gulimall-third-party-api</artifactId>
+      <version>0.0.1-SNAPSHOT</version>
+      <scope>compile</scope>
+    </dependency>
+
   </dependencies>
 </project>
