--- a/gulimall-gateway/pom.xml
+++ b/gulimall-gateway/pom.xml
@@ -48,7 +48,11 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-gateway</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-alibaba-sentinel-gateway</artifactId>
+            <version>${alibaba.version}</version>
+        </dependency>
 
     </dependencies>
 </project>
