--- a/gulimall-product/gulimall-product-biz/pom.xml
+++ b/gulimall-product/gulimall-product-biz/pom.xml
@@ -65,6 +65,12 @@
             <artifactId>gulimall-coupon-api</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.yanlaoge.gulimall.seckill</groupId>
+            <artifactId>gulimall-seckill-api</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 
