--- a/gulimall-auth-server/gulimall-auth-server-biz/src/main/resources/application.yml
+++ b/gulimall-auth-server/gulimall-auth-server-biz/src/main/resources/application.yml
@@ -1,29 +1,53 @@
-#server:
-#  port: 10001
-#  servlet:
-#    session:
-#      timeout: 30m
-#spring:
-#  application:
-#    name: gulimall-auth-server
-#  cloud:
-#    nacos:
-#      discovery:
-#        server-addr: 127.0.0.1:8848
-#  thymeleaf:
-#    cache: false
-#
-#  redis:
-##    host: 192.168.52.128
-#    host: 10.211.55.20
-#    port: 6379
-#  session:
-#    store-type: redis
-#gulimall:
-#  oauth2:
-#    weibo:
-#      host: https://api.weibo.com
-#      path: /oauth2/access_token
-#      client-id: 1734806084
-#      client-secret: 1a186d5b8056c3a41367c710b835a21c
-#      redirect-uri: http://auth.gulimall.com/oauth2.0/weibo/success
+server:
+  port: 10001
+  servlet:
+    session:
+      timeout: 30m
+spring:
+  application:
+    name: gulimall-auth-server
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 127.0.0.1:8848
+    sentinel:
+      transport:
+        dashboard: localhost:8333
+  thymeleaf:
+    cache: false
+
+  redis:
+#    host: 192.168.52.128
+    host: 10.211.55.20
+    port: 6379
+  session:
+    store-type: redis
+  zipkin:
+    base-url: http://10.211.55.20:9411
+    discovery-client-enabled: false
+    sender:
+      type: web
+  sleuth:
+    sampler:
+      probability: 1
+gulimall:
+  oauth2:
+    weibo:
+      host: https://api.weibo.com
+      path: /oauth2/access_token
+      client-id: 1734806084
+      client-secret: 1a186d5b8056c3a41367c710b835a21c
+      redirect-uri: http://auth.gulimall.com/oauth2.0/weibo/success
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
+feign:
+  sentinel:
+    enabled: true
+logging:
+  level:
+    com.yanlaoge.gulimall: debug
+    org.springframework.cloud.openfeign: debug
+    org.springframework.cloud.sleuth: debug
