--- a/gulimall-order/gulimall-order-biz/pom.xml
+++ b/gulimall-order/gulimall-order-biz/pom.xml
@@ -60,6 +60,18 @@
           <version>0.0.1-SNAPSHOT</version>
           <scope>compile</scope>
       </dependency>
+      <!-- https://mvnrepository.com/artifact/com.alipay.sdk/alipay-sdk-java -->
+      <dependency>
+          <groupId>com.alipay.sdk</groupId>
+          <artifactId>alipay-sdk-java</artifactId>
+          <version>4.9.28.ALL</version>
+      </dependency>
+      <dependency>
+          <groupId>com.yanlaoge.gulimall.seckill</groupId>
+          <artifactId>gulimall-seckill-api</artifactId>
+          <version>0.0.1-SNAPSHOT</version>
+          <scope>compile</scope>
+      </dependency>
   </dependencies>
 
 
