--- a/gulimall-search/gulimall-search-biz/src/main/resources/application.yml
+++ b/gulimall-search/gulimall-search-biz/src/main/resources/application.yml
@@ -1,22 +1,46 @@
-#spring:
-#  application:
-#    name: gulimall-search
-#  cloud:
-#    nacos:
-#      discovery:
-#        server-addr: 127.0.0.1:8848
-#  thymeleaf:
-#    cache: false
-#  redis:
-#    host: 192.168.52.128
-#    port: 6379
-#  session:
-#    store-type: redis
-#
-#server:
-#  port: 10007
-#
-#gulimall:
-#  elasticsearch:
-#    host: 192.168.52.128
-#    port: 9200
+spring:
+  application:
+    name: gulimall-search
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 127.0.0.1:8848
+    sentinel:
+      transport:
+        dashboard: localhost:8333
+  thymeleaf:
+    cache: false
+  redis:
+    host: 10.211.55.20
+    port: 6379
+  session:
+    store-type: redis
+  zipkin:
+    base-url: http://10.211.55.20:9411
+    discovery-client-enabled: false
+    sender:
+      type: web
+  sleuth:
+    sampler:
+      probability: 1
+
+server:
+  port: 10007
+
+gulimall:
+  elasticsearch:
+    host: 10.211.55.20
+    port: 9200
+logging:
+  level:
+    com.yanlaoge.gulimall: debug
+    org.springframework.cloud.openfeign: debug
+    org.springframework.cloud.sleuth: debug
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
+feign:
+  sentinel:
+    enabled: true
