--- a/gulimall-sso-server/pom.xml
+++ b/gulimall-sso-server/pom.xml
@@ -5,6 +5,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>gulimall-sso-server-api</module>
+        <module>gulimall-sso-server-biz</module>
     </modules>
     <parent>
         <groupId>com.yanlaoge.gulimall</groupId>
@@ -26,12 +27,6 @@
             <groupId>com.yanlaoge.gulimall</groupId>
             <artifactId>gulimall-common</artifactId>
             <version>0.0.1-SNAPSHOT</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>com.baomidou</groupId>
-                    <artifactId>mybatis-plus-boot-starter</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
 
     </dependencies>
