--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
         <module>gulimall-sso-server</module>
         <module>gulimall-sso-client</module>
         <module>gulimall-seckill</module>
+        <module>gulimall-core</module>
     </modules>
 
     <properties>
